# ead-cel

./: .gitignore  .project  AndroidManifest.xml  LogTesteAparelho00  LogTesteAparelho01  LogTesteEmulador01  README  logMake.out  scriptAndroid.sh  stack.sh
jni/iva/net/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  NetHeader.cpp  NetHeader.h  NetHeaderAttr.cpp  NetHeaderAttr.h  NetHeaderAudio.cpp  NetHeaderAudio.h  NetHeaderVideo.cpp  NetHeaderVideo.h  NetPacket.cpp  NetPacket.h  NetQueue.cpp  NetQueue.h  NetQueueItem.cpp  NetQueueItem.h  NetRecv.cpp  NetRecv.h  NetRecvValidator.cpp  NetRecvValidator.h  NetRedir.cpp  NetRedir.h  NetRedirItem.cpp  NetRedirItem.h  NetSend.cpp  NetSend.h  NetStatistics.cpp  NetStatistics.h  NetStorage.cpp  NetStorage.h  cmake_install.cmake  copyToDeps.bat  net.rc  net.sln  net.vcproj  netDefs.h
jni/iva/net/test/: CMakeLists.txt  Makefile  cmake_install.cmake  getDlls.bat  gtest_NetHeader.cpp  gtest_NetHeader.h  gtest_NetHeaderAttr.cpp  gtest_NetHeaderAttr.h  gtest_NetHeaderAudio.cpp  gtest_NetHeaderAudio.h  gtest_NetHeaderVideo.cpp  gtest_NetHeaderVideo.h  gtest_NetPacket.cpp  gtest_NetPacket.h  gtest_NetQueue.cpp  gtest_NetQueue.h  gtest_NetQueueItem.cpp  gtest_NetQueueItem.h  gtest_NetRecv.cpp  gtest_NetRecv.h  gtest_NetRecv.vcproj  gtest_NetRecvAutomatic.cpp  gtest_NetRecvAutomatic.h  gtest_NetSend.cpp  gtest_NetSend.h  gtest_NetSend.vcproj  gtest_NetSendAndRecv.cpp  gtest_NetSendAndRecv.h  gtest_NetSendAutomatic.cpp  gtest_NetSendAutomatic.h  gtest_NetStatistics.cpp  gtest_NetStatistics.h  gtest_NetStorage.cpp  gtest_NetStorage.h  gtest_NetStorage.vcproj  gtest_fileTransferClient.cpp  (+5 more)
jni/iva/sockets/: .cproject  .project  AbstractIgmp.h  CMakeCache.txt  CMakeLists.txt  Doxyfile  Icmp.cpp  Icmp.h  Igmp.cpp  Igmp.h  IgmpPcap.cpp  IgmpPcap.h  IgmpSender.cpp  IgmpSender.h  Makefile  NetworkInformation.cpp  NetworkInformation.h  NetworkInformation_linux.cpp  NetworkInformation_windows.cpp  Socket.cpp  Socket.h  SocketCtx.cpp  SocketCtx.h  SocketException.cpp  SocketException.h  SocketRaw.cpp  SocketRaw.h  SocketTCP.cpp  SocketTCP.h  SocketUDP.cpp  SocketUDP.h  SocketWrapper.cpp  SocketWrapper.h  cmake_install.cmake  copyDefsToDeps.bat  copyToDeps.bat  sockets.sln  sockets.vcproj
(+92 files in other folders)
